<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_question"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.android.quizapp.Help">
    <RelativeLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/summ"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/catName"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:textSize="40sp"
            android:textStyle="bold"
            android:text="@string/app_name" />

    </RelativeLayout>


    <LinearLayout
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginBottom="16dp"
                android:gravity="center"
                android:lineSpacingExtra="12dp"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                style="@style/question"
                android:text="Questions" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight="2">

            <View
                android:layout_marginLeft="16dp"
                android:background="@color/Top"
                android:layout_width="30dp"
                android:layout_height="30dp" />

            <TextView
                android:layout_marginTop="6dp"
                android:layout_marginLeft="16dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="16sp"
                android:text="@string/Only"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="horizontal">

            <View
                android:layout_marginLeft="16dp"
                android:background="@color/Multi"
                android:layout_width="30dp"
                android:layout_height="30dp" />

            <TextView
                android:layout_marginTop="6dp"
                android:layout_marginLeft="16dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="16sp"
                android:text="@string/More"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="horizontal">

            <View
                android:layout_marginLeft="16dp"
                android:background="@color/Open"
                android:layout_width="30dp"
                android:layout_height="30dp" />

            <TextView
                android:layout_marginTop="6dp"
                android:layout_marginLeft="16dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="16sp"
                android:text="@string/Write"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:lineSpacingExtra="12dp"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            style="@style/question"
            android:text="Summary" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight="2">

            <ImageView
                android:layout_marginLeft="6dp"
                android:layout_width="40dp"
                android:layout_height="30dp"
                android:src="@drawable/summary"/>

            <TextView
                android:layout_marginTop="6dp"
                android:layout_marginLeft="16dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="16sp"
                android:text="@string/ClickSum"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight="2">

            <View
                android:layout_marginLeft="16dp"
                android:background="@color/Top"
                android:layout_width="30dp"
                android:layout_height="30dp" />

            <TextView
                android:layout_marginTop="6dp"
                android:layout_marginLeft="16dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="16sp"
                android:text="@string/BlueSum"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="horizontal">

            <View
                android:layout_marginLeft="16dp"
                android:background="@color/Multi"
                android:layout_width="30dp"
                android:layout_height="30dp" />

            <TextView
                android:layout_marginTop="6dp"
                android:layout_marginLeft="16dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="16sp"
                android:text="@string/RedSum"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/actionLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/summ"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/nextBut"
            style="@style/actionButtons"
            android:onClick="Close"
            android:text="Close" />
    </LinearLayout>


</LinearLayout>






